playbin2: delay stream-changed messages

https://bugzilla.gnome.org/show_bug.cgi?id=637586